--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font-family: Poppins, Arial, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+}
+
 .App {
+  height: 100vh;
+  background-color: #f7f7f9;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding: 3rem; */
+  background-color: #101010;
+  height: 10vh;
+}
+
+.nav > ul {
+  list-style-type: none;
+  width: 60%;
+  background-color: #101010;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.nav > ul > li {
+  cursor: pointer;
+  font-size: 2.4rem;
+  font-weight: 600;
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 90vh;
+}
+
+.product {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  text-transform: capitalize;
+  background-color: #fff;
+  padding: 1rem;
+  margin: 2rem;
+  height: 30rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom-right-radius: 3rem;
+  border-top-left-radius: 1rem;
+  -webkit-box-shadow: 10px 10px 28px -30px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 28px -30px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 28px -30px rgba(0, 0, 0, 0.75);
 }
 
-.App-link {
-  color: #61dafb;
+.bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 3%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bottom > button {
+  background-color: #101010;
+  color: #fff;
+  padding: 0.3rem;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  margin-left: 2rem;
 }
