--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,19 @@ body {
   height: 90vh;
 }
 
+.loading {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  color: #06b6d4;
+  height: 90vh;
+}
+
+.loading > h1 {
+  font-size: 6rem;
+  font-weight: 100;
+}
+
 .product {
   text-align: center;
   text-transform: capitalize;
@@ -78,7 +91,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 3%;
+  /* align-self: flex-end; */
+  margin-top: 10%;
 }
 
 .bottom > button {
