--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding-top: 3rem;
+  /* justify-content: center; */
+}
+
+.cart-page > h1 {
+  font-size: 4rem;
+  font-weight: 200;
 }
 
 .cart-item {
