--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,12 @@ body {
   color: #f7f7f9;
   border: none;
   border-radius: 0.25rem;
+  cursor: pointer;
+  transition: 0.5s ease-in all;
+}
+
+.btn-clear:hover {
+  background-color: #05869c;
 }
 
 .cart-item {
